added yml for github and azure

--- a/TronApi/appsettings.json
+++ b/TronApi/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost\\sqlexpress;database=troncitydb;trusted_connection=true"
+    "DefaultConnection": "Server=tron-vincent.database.windows.net;Initial Catalog=troncitydb;User ID=TyroneStoleMyElo;Password=#Wacraft11061997;Connect Timeout=60;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
+
+    //"DefaultConnection": "server=localhost\\sqlexpress;database=troncitydb;trusted_connection=true"
   },
   "Logging": {
     "LogLevel": {
