--- a/.github/workflows/TronApi.yml
+++ b/.github/workflows/TronApi.yml
@@ -33,6 +33,10 @@ jobs:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
         publish-profile: ${{ env.AZURE_WEBAPP_PUBLISH_PROFILE }}
+    - name: Run EF Core migrations
+      run: |
+        dotnet tool install --global dotnet-ef
+        dotnet ef database update --project C:\Users\vincent schuurhof\Documents\TronCity\TronApi-master\TronApi
     - name: Publish Artifacts
       uses: actions/upload-artifact@v1.0.0
       with:
